--- a/src/omscs/edtech/ui/views/Main Screen.fxml
+++ b/src/omscs/edtech/ui/views/Main Screen.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.1605902777777778" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="861.0" prefWidth="1154.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<SplitPane fx:controller="omscs.edtech.ui.controllers.MainController" dividerPositions="0.1605902777777778" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="861.0" prefWidth="1154.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="548.0" prefWidth="257.0">
          <children>
