--- a/src/omscs/edtech/ui/views/Settings.fxml
+++ b/src/omscs/edtech/ui/views/Settings.fxml
@@ -5,9 +5,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1072.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<TabPane fx:controller="omscs.edtech.ui.controllers.SettingsController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1072.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <tabs>
-    <Tab text="Missing Assignments" />
-    <Tab text="Feedback" />
+    <Tab fx:id="tabMissingAssignments" text="Missing Assignments" />
+    <Tab fx:id="tabFeedback" text="Feedback" />
   </tabs>
 </TabPane>
