--- a/src/omscs/edtech/ui/views/Main Screen.fxml
+++ b/src/omscs/edtech/ui/views/Main Screen.fxml
@@ -4,7 +4,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane fx:controller="omscs.edtech.ui.controllers.MainController" dividerPositions="0.1605902777777778" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="861.0" prefWidth="1154.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<SplitPane fx:controller="omscs.edtech.ui.controllers.MainController"
+           dividerPositions="0.1605902777777778" maxHeight="-Infinity" maxWidth="-Infinity"
+           minHeight="-Infinity" minWidth="-Infinity" prefHeight="861.0"
+           prefWidth="1154.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="548.0" prefWidth="257.0">
          <children>
@@ -14,7 +17,7 @@
             <Button fx:id="btnSettings" layoutX="16.0" layoutY="194.0" mnemonicParsing="false" onAction="#showSettingsView" prefHeight="31.0" prefWidth="152.0" text="Settings" />
          </children></AnchorPane>
     <AnchorPane fx:id="mainViewPane" minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="378.0">
-        
+
     </AnchorPane>
   </items>
 </SplitPane>
