--- a/src/omscs/edtech/ui/views/Add Classes.fxml
+++ b/src/omscs/edtech/ui/views/Add Classes.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane fx:id="paneAddClasses" dividerPositions="0.41253507951356405" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="744.0" prefWidth="1071.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<SplitPane fx:id="paneAddClasses" dividerPositions="0.41253507951356405" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="607.0" prefWidth="459.0">
+    <AnchorPane>
          <children>
             <ComboBox fx:id="cmbClassListing" layoutX="23.0" layoutY="41.0" prefHeight="31.0" prefWidth="277.0" />
             <!--<DatePicker fx:id="dateStart" layoutX="128.0" layoutY="218.0" />
@@ -25,7 +25,7 @@
             <Button layoutX="90.0" layoutY="685.0" mnemonicParsing="false" text="Cancel" />
             <Button layoutX="325.0" layoutY="685.0" mnemonicParsing="false" text="Delete Class" />
          </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+    <AnchorPane>
          <children>
             <Label layoutX="24.0" layoutY="47.0" text="Class Roster:" />
             <Button layoutX="453.0" layoutY="42.0" mnemonicParsing="false" text="Import New Roster" />
