--- a/src/omscs/edtech/ui/views/Create Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Create Assignments.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.5061855670103093" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="664.0" prefWidth="972.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<SplitPane dividerPositions="1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0">
          <children>
             <ComboBox fx:id="cbAssignments" layoutX="20.0" layoutY="29.0" prefHeight="31.0" prefWidth="304.0" />
             <Button layoutX="332.0" layoutY="29.0" mnemonicParsing="false" text="New Assignment" />
@@ -22,6 +22,6 @@
             <Button layoutX="319.0" layoutY="617.0" mnemonicParsing="false" text="Delete Assignment" />
             <Label layoutX="31.0" layoutY="454.0" text="Description:" />
          </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+    <AnchorPane minHeight="0.0" minWidth="0.0"/>
   </items>
 </SplitPane>
