--- a/src/omscs/edtech/ui/views/EMail Editor.fxml
+++ b/src/omscs/edtech/ui/views/EMail Editor.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="928.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HTMLEditor fx:id="txtEmail" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="14.0" layoutY="60.0" prefHeight="551.0" prefWidth="901.0" />
       <Button fx:id="btnSaveChanges" layoutX="14.0" layoutY="620.0" mnemonicParsing="false" text="Save Changes" />
