--- a/src/omscs/edtech/ui/views/Grade Assignments.fxml
+++ b/src/omscs/edtech/ui/views/Grade Assignments.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.46176470588235297" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="762.0" prefWidth="1022.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<SplitPane dividerPositions="0.46176470588235297" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0">
          <children>
             <ComboBox fx:id="cbAssignments" layoutX="25.0" layoutY="21.0" prefHeight="31.0" prefWidth="435.0" />
             <Button layoutX="25.0" layoutY="59.0" mnemonicParsing="false" text="Import Assignment File(s)" />
@@ -21,7 +21,7 @@
             <Button fx:id="btnSaveGrades" layoutX="25.0" layoutY="715.0" mnemonicParsing="false" text="Save Grades" />
             <Button fx:id="btnSendAllFeedback" layoutX="136.0" layoutY="715.0" mnemonicParsing="false" text="Send All Feedback" />
          </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="760.0" prefWidth="534.0">
+    <AnchorPane minHeight="0.0" minWidth="0.0">
          <children>
             <Label layoutX="14.0" layoutY="14.0" text="Assignment Description:" />
             <Label fx:id="lblDescription" layoutX="14.0" layoutY="42.0" text="----" />
