--- a/src/omscs/edtech/ui/views/EMail Editor.fxml
+++ b/src/omscs/edtech/ui/views/EMail Editor.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
 <?import javafx.scene.web.*?>
+<?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HTMLEditor fx:id="txtEmail" htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" layoutX="14.0" layoutY="60.0" prefHeight="551.0" prefWidth="901.0" />
-      <Button fx:id="btnSaveChanges" layoutX="14.0" layoutY="620.0" mnemonicParsing="false" text="Save Changes" />
-      <VBox fx:id="boxCustomControls" layoutX="14.0" layoutY="5.0" prefHeight="49.0" prefWidth="901.0" />
+      <ToolBar prefHeight="40.0" prefWidth="200.0" />
+      <HTMLEditor htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" prefHeight="314.0" prefWidth="687.0" />
+      <ToolBar prefHeight="40.0" prefWidth="200.0">
+        <items>
+          <Button mnemonicParsing="false" text="Save Changes" />
+        </items>
+      </ToolBar>
    </children>
-</Pane>
+</VBox>
