Added controllers for all views. All views scale with screen size.

--- a/src/omscs/edtech/ui/views/Add Classes.fxml
+++ b/src/omscs/edtech/ui/views/Add Classes.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.*?>
 
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<HBox fx:controller="omscs.edtech.ui.controllers.AddClassesController" fx:id="parentBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="711.0" prefWidth="429.0">
+      <VBox fx:id="leftBox" prefHeight="711.0" prefWidth="429.0">
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
@@ -61,7 +61,7 @@
             </ToolBar>
          </children>
       </VBox>
-      <VBox prefHeight="711.0" prefWidth="519.0">
+      <VBox fx:id="rightBox" prefHeight="711.0" prefWidth="519.0">
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0">
               <items>
