--- a/src/omscs/edtech/ui/views/EMail Editor.fxml
+++ b/src/omscs/edtech/ui/views/EMail Editor.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.*?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:controller="omscs.edtech.ui.controllers.EmailEditorController" fx:id="parentBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" />
-      <HTMLEditor htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" prefHeight="314.0" prefWidth="687.0" />
-      <ToolBar prefHeight="40.0" prefWidth="200.0">
+      <ToolBar fx:id="customWidgetToolBar" prefHeight="40.0"/>
+      <HTMLEditor htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;&lt;/html&gt;" />
+      <ToolBar prefHeight="40.0" >
         <items>
           <Button mnemonicParsing="false" text="Save Changes" />
         </items>
